--- a/src/pages/MemberRegistration/Form.css
+++ b/src/pages/MemberRegistration/Form.css
@@ -104,7 +104,7 @@
     border: none;
     text-transform: uppercase;
     padding: 10px 20px;
-    border-radius: 4px;
+    border-radius: 5px;
   }
   .member-form .container {
     display: grid;
@@ -117,13 +117,13 @@
   
   .member-form button {
     display: block;
+    margin: 10px auto;
     appearance: none;
-    margin-top: 40px;
-    border: 1px solid #333;
-    margin-bottom: 20px;
+    border: 5px solid #075dd5;
     text-transform: uppercase;
-    padding: 10px 20px;
-    border-radius: 4px;
+    padding: 10px 50px;
+    border-radius: 10px;
+    cursor: pointer;
   }
   
   @media screen and (max-width: 480px) {
