--- a/src/pages/Shared/NavBar/NavBar.css
+++ b/src/pages/Shared/NavBar/NavBar.css
@@ -22,7 +22,8 @@
   }
   .navbar .logo {
     background-color: white;
-    padding: 10px;
+    padding: 15px;
+    margin: 5px;
     border-radius: 50%;
   }
   .res-logo {
