--- a/src/pages/Members/AlumniStudent/AlumniStudent.css
+++ b/src/pages/Members/AlumniStudent/AlumniStudent.css
@@ -8,6 +8,8 @@
     color: green;
   }
   .cardStyle {
+    display: 'block';
     width: '30vw';
-    height: '30vh'
+    transition-duration: 0.3s;
+    height: '45vh'
 }
