--- a/src/pages/MemberRegistration/Form.css
+++ b/src/pages/MemberRegistration/Form.css
@@ -12,137 +12,11 @@
   opacity: 0.1; /* Adjust transparency */
   pointer-events: none; /* Prevent interaction */
 }
-.member-form {
-    background: rgb(87, 122, 124);
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-      sans-serif;
-    padding: 50px 0;
-    margin-bottom: 10px;
-    font-weight: bolder;
-  }
-  
-  .member-form form {
-    max-width: 90%;
-    margin: 0 auto;
-  }
-  
-  .member-form h1 {
-    font-weight: 100;
-    color: white;
-    text-align: center;
-    padding-bottom: 10px;
-    border-bottom: 1px solid rgb(240, 39, 39);
-  }
-  
-  .member-form p {
-    color: #bf1650;
-  }
-  
-  .member-form p::before {
-    display: inline;
-    content: "⚠ ";
-  }
-  
-  .member-form input,
-  select {
-    display: block;
-    width: 100%;
-    box-sizing: border-box;
-    border-radius: 4px;
-    border: 1px solid white;
-    padding: 10px 15px;
-    margin-bottom: 10px;
-    font-size: 14px;
-  }
-  
-  .member-form label {
-    display: block;
-    line-height: 2;
-    text-align: left;
-    margin-bottom: 13px;
-    margin-top: 20px;
-    color: white;
-    font-size: 20px;
-    font-weight: 700;
-  }
-  .member-form input[type="file"] {
-    color: white;
-  }
-  .member-form button[type="submit"],
-  .member-form input[type="submit"] {
-    cursor: pointer;
-    background: #ec5990;
-    color: white;
-    text-transform: uppercase;
-    border: none;
-    margin: 40px 0;
-    padding: 20px;
-    font-size: 16px;
-    font-weight: 100;
-    letter-spacing: 10px;
-  }
-  .member-form .required{
-    color: red;
-    font-size: 10px;;
-
-  }
-  
-  .member-form button[type="submit"]:hover,
-  .member-form input[type="submit"]:hover {
-    background: #bf1650;
-  }
-  
-  .member-form button[type="submit"]:active,
-  .member-form input[type="button"]:active,
-  .member-form input[type="submit"]:active {
-    transition: 0.3s all;
-    transform: translateY(3px);
-    border: 1px solid transparent;
-    opacity: 0.8;
-  }
-  
-  .member-form input:disabled {
-    opacity: 0.4;
-  }
-  
-  .member-form input[type="button"]:hover {
-    transition: 0.3s all;
-  }
-  
-  .member-form button[type="submit"],
-  .member-form input[type="button"],
-  .member-form input[type="submit"] 
- 
-  
-  .member-form button[type="button"] {
-    display: block;
-    appearance: none;
-    background: #333;
-    color: white;
-    border: none;
-    text-transform: uppercase;
-    padding: 10px 20px;
-    border-radius: 5px;
-  }
-  .member-form .container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
-  }
-  .member-form hr {
-    margin-top: 30px;
-  }
-  
-  .member-form button {
-    display: block;
-    appearance: none;
-    border: 5px solid #075dd5;
-    text-transform: uppercase;
-    padding: 10px 50px;
-    border-radius: 10px;
-    cursor: pointer;
-  }
+.divLayout {
+	display: flex;
+	align-items: center;
+	margin-bottom: 20px;
+}
   
   @media screen and (max-width: 480px) {
     .member-form .container {
