--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,9 @@ body {
   .bangla-text {
     font-family: 'Noto Sans Bengali', sans-serif;
 }
+a {
+	text-decoration: none;
+	font-weight: 600;
+	font-size: 16px;
+	color: black;
+}
