--- a/src/pages/Shared/NavBar/NavBar.css
+++ b/src/pages/Shared/NavBar/NavBar.css
@@ -1,18 +1,22 @@
 .navbar a {
-    text-decoration: none;
-    color: white;
-    margin-left: 15px;
-    font-weight: 700;
-    font-size: 20px;
-  }
+	text-decoration: none;
+		color: white;
+		font-weight: 700;
+			font-size: 16px;
+			}
+			
+			.navbar li {
+				text-decoration: none;
+				color: white;
+				font-weight: 700;
+				font-size: 16px;
+			}
   
   .title-name {
-    font-size: 30px;
-    text-align: center;
-    background-color: #dff9fb;
-    font-weight: 500;
+		font-size: 20px;
+			text-align: center;
   }
-  
+
   .menu-item a {
     display: block;
     text-decoration: none;
@@ -22,7 +26,7 @@
   }
   .navbar .logo {
     background-color: white;
-    padding: 15px;
+		padding: 10px;
     margin: 5px;
     border-radius: 50%;
   }
