--- a/src/pages/ProfilePhoto/ProfilePhoto.css
+++ b/src/pages/ProfilePhoto/ProfilePhoto.css
@@ -1,3 +1,4 @@
+
 .profile-photo {
 	color: rgb(21, 20, 20);
 	font-family: 'Arial', sans-serif;
@@ -13,7 +14,7 @@
 }
 
 .frame-thumbnail {
-	width: 180px;
+	width: 80px;
 	border: 2px solid rgb(20, 52, 233);
 	cursor: pointer;
 }
@@ -39,8 +40,7 @@
 	text-align: center;
 	color: white;
 	background-color: #111;
-	padding: 40px 20px;
-	max-width: 900px;
+	padding: 20px 5px;
 	margin: 16px auto;
 	font-family: 'Noto Sans Bengali', sans-serif;
 }
@@ -100,4 +100,14 @@
 
 .download-btn:hover {
 	background-color: #3b5e85;
+}
+@media (max-width: 480px) {
+	.frame-selector {
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+
+	img.frame-thumbnail {
+		width: 50px;
+	}
 }
